--- a/homepage.html
+++ b/homepage.html
@@ -77,7 +77,7 @@
                 </div>
               </div>
             </a>
-            <a href="#">
+            <a href="https://reserveurteachers.blogspot.com/">
               <div class="option-2">
                 <div class="option-caption">
                   <h1>功課及考試</h1>
@@ -85,7 +85,7 @@
                 </div>
               </div>
             </a>
-            <a href="#">
+            <a href="https://reserveurteachers.blogspot.com/">
               <div class="option-3">
                 <div class="option-caption">
                   <h1>段考考程表</h1>
